--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
       <input type="submit" value="Enviar" id="button" />
     </form>
   </body>
-  <script src="./script.js"></script>
+  <script src="./script.js" defer></script>
 </html>
